# gco-cppyy

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst  interface.hh  manifest.cmake  selection.xml
cmake/: FindCppyy.cmake  FindLibClang.cmake
py/tests/: test_gco.py
